@@ -1,3 +1,8 @@
+Mon Nov 21 18:51:30 CET 2011
+	Added option to suppress generation of the 'Date:' header to be
+	used on embedded systems without RTC.  Documented the new option
+	and the configure options. -CG
+
 Sat Nov 19 20:08:40 CET 2011
 	Releasing 0.9.17. -CG
 
@@ -10,7 +15,7 @@ Sun Nov 13 13:34:29 CET 2011
 	under certain (rare) circumstances. -CG
 
 Fri Nov  4 10:03:00 CET 2011
-	Small updates to the tutorial. 
+	Small updates to the tutorial.
 	Releasing 0.9.16. -CG
 
 Thu Nov  3 10:14:59 CET 2011
